; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_uvd_v5_0.c_uvd_v5_0_set_clockgating_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_uvd_v5_0.c_uvd_v5_0_set_clockgating_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_device = type { i32 }

@AMD_CG_STATE_GATE = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @uvd_v5_0_set_clockgating_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uvd_v5_0_set_clockgating_state(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.amdgpu_device*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.amdgpu_device*
  store %struct.amdgpu_device* %9, %struct.amdgpu_device** %6, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @AMD_CG_STATE_GATE, align 4
  %12 = icmp eq i32 %10, %11
  %13 = zext i1 %12 to i64
  %14 = select i1 %12, i32 1, i32 0
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %2
  %18 = load i8*, i8** %4, align 8
  %19 = call i64 @uvd_v5_0_wait_for_idle(i8* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %17
  %22 = load i32, i32* @EBUSY, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %3, align 4
  br label %33

24:                                               ; preds = %17
  %25 = load %struct.amdgpu_device*, %struct.amdgpu_device** %6, align 8
  %26 = call i32 @uvd_v5_0_enable_clock_gating(%struct.amdgpu_device* %25, i32 1)
  br label %30

27:                                               ; preds = %2
  %28 = load %struct.amdgpu_device*, %struct.amdgpu_device** %6, align 8
  %29 = call i32 @uvd_v5_0_enable_clock_gating(%struct.amdgpu_device* %28, i32 0)
  br label %30

30:                                               ; preds = %27, %24
  %31 = load %struct.amdgpu_device*, %struct.amdgpu_device** %6, align 8
  %32 = call i32 @uvd_v5_0_set_sw_clock_gating(%struct.amdgpu_device* %31)
  store i32 0, i32* %3, align 4
  br label %33

33:                                               ; preds = %30, %21
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i64 @uvd_v5_0_wait_for_idle(i8*) #1

declare dso_local i32 @uvd_v5_0_enable_clock_gating(%struct.amdgpu_device*, i32) #1

declare dso_local i32 @uvd_v5_0_set_sw_clock_gating(%struct.amdgpu_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
